# RAG

./: .gitignore  CI_DEBUG_NOTES.md  CONTRIBUTING.md  KIND_LIMITATIONS.md  MaaS_DEBUG_SUMMARY.md  OPENSHIFT_COMPATIBILITY.md  README.md  pytest.ini
.github/workflows/: ansible-lint.yml  build-and-push.yaml  build-dev.yml  create-release-pr.yml  e2e-tests-maas.yaml  e2e-tests.yaml  release.yml
client-examples-python/: README.md  chat-completions.py  list-models.py  list-shields.py  list-tools.py  rag-create-vector-db.py  rag-delete-vector-db.py  rag-list-vector-db.py  rag-use-vector-db.py  register-shield.py  requirements.txt  test-shield.py  web-search.py
deploy/helm/: Makefile  rag-values.yaml.example
deploy/local/: Makefile  ingestion-config.yaml  podman-compose.yml
docs/: AppleSiliconReadMe.md  kind-limitations.md  local_setup_guide.md  maas-e2e-setup-guide.md  maas-integration-plan.md  maas-integration-quickstart.md  ollama_setup.md  openshift_setup_guide.md  rag-reference-architecture.md  suggested_questions_feature.md
frontend/: Containerfile  pyproject.toml  requirements.txt  start.sh
frontend/llama_stack/distribution/ui/page/playground/: chat.py
frontend/llama_stack_ui/distribution/ui/: app.py
frontend/llama_stack_ui/distribution/ui/modules/: api.py  utils.py
frontend/llama_stack_ui/distribution/ui/page/distribution/: datasets.py  eval_tasks.py  inspect.py  models.py  providers.py  scoring_functions.py  shields.py  vector_dbs.py
frontend/llama_stack_ui/distribution/ui/page/evaluations/: app_eval.py  evaluations.py  native_eval.py
frontend/llama_stack_ui/distribution/ui/page/playground/: agent.py  chat.py  direct.py
frontend/llama_stack_ui/distribution/ui/page/upload/: __init__.py  upload.py
ingestion-service/: .gitignore  Containerfile  README.md  ingest.py  requirements.txt
notebooks/: data-ingestion-pipeline.ipynb
tests/: README.md
(+33 files in other folders)
