[project]
name = "llama_stack_ui"
version = "6"
description = "Local LLM stack with UI for RAG-based applications"
authors = [
    { name = "Saurabh Agarwal", email = "sauagarw@redhat.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit",
    "pandas",
    "llama-stack-client==0.2.23",
    "requests",
    "streamlit-option-menu",
    "llama-stack==0.2.23",
    "fire",
    "asyncpg",
]

[tool.setuptools]
packages = ["llama_stack_ui"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
